--- a/src/creator.html
+++ b/src/creator.html
@@ -225,8 +225,7 @@
 		<div class="box question-bank-dialog"
 			ng-class= '{ show: questionBankDialog }'
 			ng-click= 'hideCover()'>
-			<div class="enable-qb-question"
-				ng-click="$event.stopPropagation()">
+			<div class="enable-qb-question">
 				<label>Enable question bank? </label>
 				<div class="enable-qb-options"
 					ng-click="$event.stopPropagation()">
