fixed duplication error and added instructions for keyboard

--- a/src/player.html
+++ b/src/player.html
@@ -75,9 +75,10 @@
 	
             <p  id="keyboard-instructions"
 			tabindex="0">
-                Use <strong>tab </strong> and <strong> shift-tab </strong> to move between items and buttons at the bottom.
-                Use <strong> enter </strong> or <strong> space </strong> to select an item to match. 
-				Use <strong>left arrow </strong> or <strong> right arrow </strong> to quickly switch between the left and right side.
+                <p> Use <strong>tab </strong> and <strong> shift-tab </strong> to move between items and buttons at the bottom. </p>  
+               <p> Use <strong> enter </strong> or <strong> space </strong> to select an item to match. </p> 
+				<p> Use <strong>left arrow </strong> or <strong> right arrow </strong> to quickly switch between the left and right side. </p> 
+				<p> Use keys <strong>QWERTY</strong> to select items on the left side and keys <strong>12345</strong> to select items on the right side in the order listed. </p>
             </p>
 
 			</div>
